# AVL_Tree

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
inc/: AVL_Tree.hpp  read_and_process.hpp  tree_vizualization.hpp
src/: CMakeLists.txt  main.cpp  set.cpp  tree.cpp
tests/: CMakeLists.txt  find_segfault  run_tests  test_balancing.py  test_generate.py  test_tree.cpp
tests/tests/: 10answer.txt  10test.txt  11answer.txt  11test.txt  12answer.txt  12test.txt  13answer.txt  13test.txt  14answer.txt  14test.txt  15answer.txt  15test.txt  16test.txt  17answer.txt  17test.txt  2test.txt  3test.txt  4test.txt  5test.txt  6test.txt  7answer.txt  7test.txt  8answer.txt  8test.txt  9answer.txt  9test.txt
